--- a/Rmd/LPS_DESeq-contrasts_Pdam.Rmd
+++ b/Rmd/LPS_DESeq-contrasts_Pdam.Rmd
@@ -54,13 +54,13 @@ rm ~/computing/scripts/EAPSI_LPS-master/DESeqresults_Pdam/lists/res_LPS_ctrl_dn_
 res_HW1_HW2 <- results(dds_LPS, contrast = c("Colony", "HW1", "HW2"))
 res_HW1_HW2$IDGeneInfo <- mcols(dds_LPS)$IDGeneInfo
 res_HW1_HW2$IDGeneInfo <- as.character(res_HW1_HW2$IDGeneInfo)
-write.csv(as.data.frame(res_HW1_HW2[order(res_HW1_HW2$padj, decreasing = FALSE),]), file = "~/computing/scripts/EAPSI_LPS-master/DESeqresults_Pdam/tables/all/res_HW1_HW2.csv")
+write.csv(as.data.frame(res_HW1_HW2[order(res_HW1_HW2$padj, decreasing = FALSE),]), file = "./outputs/DESeq-results/tables/all/res_HW1_HW2.csv")
 ressig_HW1_HW2 <- subset(res_HW1_HW2, padj<0.01)
 ressig_HW1_HW2_up <- subset(res_HW1_HW2, padj<0.01 & log2FoldChange>0)
 ressig_HW1_HW2_dn <- subset(res_HW1_HW2, padj<0.01 & log2FoldChange<0)
-write.csv(as.data.frame(ressig_HW1_HW2[order(ressig_HW1_HW2$padj, decreasing = FALSE),]), file = "~/computing/scripts/EAPSI_LPS-master/DESeqresults_Pdam/tables/overall/res_HW1_HW2.csv")
-write.csv(as.data.frame(ressig_HW1_HW2_up[order(ressig_HW1_HW2_up$log2FoldChange, decreasing = TRUE),]), file = "~/computing/scripts/EAPSI_LPS-master/DESeqresults_Pdam/tables/up/res_HW1_HW2_up.csv")
-write.csv(as.data.frame(ressig_HW1_HW2_dn[order(ressig_HW1_HW2_dn$log2FoldChange, decreasing = FALSE),]), file = "~/computing/scripts/EAPSI_LPS-master/DESeqresults_Pdam/tables/down/res_HW1_HW2_dn.csv")
+write.csv(as.data.frame(ressig_HW1_HW2[order(ressig_HW1_HW2$padj, decreasing = FALSE),]), file = "./outputs/DESeq-results/tables/overall/res_HW1_HW2.csv")
+write.csv(as.data.frame(ressig_HW1_HW2_up[order(ressig_HW1_HW2_up$log2FoldChange, decreasing = TRUE),]), file = "./outputs/DESeq-results/tables/up/res_HW1_HW2_up.csv")
+write.csv(as.data.frame(ressig_HW1_HW2_dn[order(ressig_HW1_HW2_dn$log2FoldChange, decreasing = FALSE),]), file = "./outputs/DESeq-results/tables/down/res_HW1_HW2_dn.csv")
 colnames(res_HW1_HW2)
 summary(res_HW1_HW2)
 ```
@@ -70,13 +70,13 @@ summary(res_HW1_HW2)
 res_HW1_WT1 <- results(dds_LPS, contrast = c("Colony", "HW1", "WT1"))
 res_HW1_WT1$IDGeneInfo <- mcols(dds_LPS)$IDGeneInfo
 res_HW1_WT1$IDGeneInfo <- as.character(res_HW1_WT1$IDGeneInfo)
-write.csv(as.data.frame(res_HW1_WT1[order(res_HW1_WT1$padj, decreasing = FALSE),]), file = "~/computing/scripts/EAPSI_LPS-master/DESeqresults_Pdam/tables/all/res_HW1_WT1.csv")
+write.csv(as.data.frame(res_HW1_WT1[order(res_HW1_WT1$padj, decreasing = FALSE),]), file = "./outputs/DESeq-results/tables/all/res_HW1_WT1.csv")
 ressig_HW1_WT1 <- subset(res_HW1_WT1, padj<0.01)
 ressig_HW1_WT1_up <- subset(res_HW1_WT1, padj<0.01 & log2FoldChange>0)
 ressig_HW1_WT1_dn <- subset(res_HW1_WT1, padj<0.01 & log2FoldChange<0)
-write.csv(as.data.frame(ressig_HW1_WT1[order(ressig_HW1_WT1$padj, decreasing = FALSE),]), file = "~/computing/scripts/EAPSI_LPS-master/DESeqresults_Pdam/tables/overall/res_HW1_WT1.csv")
-write.csv(as.data.frame(ressig_HW1_WT1_up[order(ressig_HW1_WT1_up$log2FoldChange, decreasing = TRUE),]), file = "~/computing/scripts/EAPSI_LPS-master/DESeqresults_Pdam/tables/up/res_HW1_WT1_up.csv")
-write.csv(as.data.frame(ressig_HW1_WT1_dn[order(ressig_HW1_WT1_dn$log2FoldChange, decreasing = FALSE),]), file = "~/computing/scripts/EAPSI_LPS-master/DESeqresults_Pdam/tables/down/res_HW1_WT1_dn.csv")
+write.csv(as.data.frame(ressig_HW1_WT1[order(ressig_HW1_WT1$padj, decreasing = FALSE),]), file = "./outputs/DESeq-results/tables/overall/res_HW1_WT1.csv")
+write.csv(as.data.frame(ressig_HW1_WT1_up[order(ressig_HW1_WT1_up$log2FoldChange, decreasing = TRUE),]), file = "./outputs/DESeq-results/tables/up/res_HW1_WT1_up.csv")
+write.csv(as.data.frame(ressig_HW1_WT1_dn[order(ressig_HW1_WT1_dn$log2FoldChange, decreasing = FALSE),]), file = "./outputs/DESeq-results/tables/down/res_HW1_WT1_dn.csv")
 colnames(res_HW1_WT1)
 summary(res_HW1_WT1)
 ```
@@ -86,13 +86,13 @@ summary(res_HW1_WT1)
 res_HW1_WT2 <- results(dds_LPS, contrast = c("Colony", "HW1", "WT2"))
 res_HW1_WT2$IDGeneInfo <- mcols(dds_LPS)$IDGeneInfo
 res_HW1_WT2$IDGeneInfo <- as.character(res_HW1_WT2$IDGeneInfo)
-write.csv(as.data.frame(res_HW1_WT2[order(res_HW1_WT2$padj, decreasing = FALSE),]), file = "~/computing/scripts/EAPSI_LPS-master/DESeqresults_Pdam/tables/all/res_HW1_WT2.csv")
+write.csv(as.data.frame(res_HW1_WT2[order(res_HW1_WT2$padj, decreasing = FALSE),]), file = "./outputs/DESeq-results/tables/all/res_HW1_WT2.csv")
 ressig_HW1_WT2 <- subset(res_HW1_WT2, padj<0.01)
 ressig_HW1_WT2_up <- subset(res_HW1_WT2, padj<0.01 & log2FoldChange>0)
 ressig_HW1_WT2_dn <- subset(res_HW1_WT2, padj<0.01 & log2FoldChange<0)
-write.csv(as.data.frame(ressig_HW1_WT2[order(ressig_HW1_WT2$padj, decreasing = FALSE),]), file = "~/computing/scripts/EAPSI_LPS-master/DESeqresults_Pdam/tables/overall/res_HW1_WT2.csv")
-write.csv(as.data.frame(ressig_HW1_WT2_up[order(ressig_HW1_WT2_up$log2FoldChange, decreasing = TRUE),]), file = "~/computing/scripts/EAPSI_LPS-master/DESeqresults_Pdam/tables/up/res_HW1_WT2_up.csv")
-write.csv(as.data.frame(ressig_HW1_WT2_dn[order(ressig_HW1_WT2_dn$log2FoldChange, decreasing = FALSE),]), file = "~/computing/scripts/EAPSI_LPS-master/DESeqresults_Pdam/tables/down/res_HW1_WT2_dn.csv")
+write.csv(as.data.frame(ressig_HW1_WT2[order(ressig_HW1_WT2$padj, decreasing = FALSE),]), file = "./outputs/DESeq-results/tables/overall/res_HW1_WT2.csv")
+write.csv(as.data.frame(ressig_HW1_WT2_up[order(ressig_HW1_WT2_up$log2FoldChange, decreasing = TRUE),]), file = "./outputs/DESeq-results/tables/up/res_HW1_WT2_up.csv")
+write.csv(as.data.frame(ressig_HW1_WT2_dn[order(ressig_HW1_WT2_dn$log2FoldChange, decreasing = FALSE),]), file = "./outputs/DESeq-results/tables/down/res_HW1_WT2_dn.csv")
 colnames(res_HW1_WT2)
 summary(res_HW1_WT2)
 ```
@@ -102,13 +102,13 @@ summary(res_HW1_WT2)
 res_HW2_WT1 <- results(dds_LPS, contrast = c("Colony", "HW2", "WT1"))
 res_HW2_WT1$IDGeneInfo <- mcols(dds_LPS)$IDGeneInfo
 res_HW2_WT1$IDGeneInfo <- as.character(res_HW2_WT1$IDGeneInfo)
-write.csv(as.data.frame(res_HW2_WT1[order(res_HW2_WT1$padj, decreasing = FALSE),]), file = "~/computing/scripts/EAPSI_LPS-master/DESeqresults_Pdam/tables/all/res_HW2_WT1.csv")
+write.csv(as.data.frame(res_HW2_WT1[order(res_HW2_WT1$padj, decreasing = FALSE),]), file = "./outputs/DESeq-results/tables/all/res_HW2_WT1.csv")
 ressig_HW2_WT1 <- subset(res_HW2_WT1, padj<0.01)
 ressig_HW2_WT1_up <- subset(res_HW2_WT1, padj<0.01 & log2FoldChange>0)
 ressig_HW2_WT1_dn <- subset(res_HW2_WT1, padj<0.01 & log2FoldChange<0)
-write.csv(as.data.frame(ressig_HW2_WT1[order(ressig_HW2_WT1$padj, decreasing = FALSE),]), file = "~/computing/scripts/EAPSI_LPS-master/DESeqresults_Pdam/tables/overall/res_HW2_WT1.csv")
-write.csv(as.data.frame(ressig_HW2_WT1_up[order(ressig_HW2_WT1_up$log2FoldChange, decreasing = TRUE),]), file = "~/computing/scripts/EAPSI_LPS-master/DESeqresults_Pdam/tables/up/res_HW2_WT1_up.csv")
-write.csv(as.data.frame(ressig_HW2_WT1_dn[order(ressig_HW2_WT1_dn$log2FoldChange, decreasing = FALSE),]), file = "~/computing/scripts/EAPSI_LPS-master/DESeqresults_Pdam/tables/down/res_HW2_WT1_dn.csv")
+write.csv(as.data.frame(ressig_HW2_WT1[order(ressig_HW2_WT1$padj, decreasing = FALSE),]), file = "./outputs/DESeq-results/tables/overall/res_HW2_WT1.csv")
+write.csv(as.data.frame(ressig_HW2_WT1_up[order(ressig_HW2_WT1_up$log2FoldChange, decreasing = TRUE),]), file = "./outputs/DESeq-results/tables/up/res_HW2_WT1_up.csv")
+write.csv(as.data.frame(ressig_HW2_WT1_dn[order(ressig_HW2_WT1_dn$log2FoldChange, decreasing = FALSE),]), file = "./outputs/DESeq-results/tables/down/res_HW2_WT1_dn.csv")
 colnames(res_HW2_WT1)
 summary(res_HW2_WT1)
 ```
@@ -118,13 +118,13 @@ summary(res_HW2_WT1)
 res_HW2_WT2 <- results(dds_LPS, contrast = c("Colony", "HW2", "WT2"))
 res_HW2_WT2$IDGeneInfo <- mcols(dds_LPS)$IDGeneInfo
 res_HW2_WT2$IDGeneInfo <- as.character(res_HW2_WT2$IDGeneInfo)
-write.csv(as.data.frame(res_HW2_WT2[order(res_HW2_WT2$padj, decreasing = FALSE),]), file = "~/computing/scripts/EAPSI_LPS-master/DESeqresults_Pdam/tables/all/res_HW2_WT2.csv")
+write.csv(as.data.frame(res_HW2_WT2[order(res_HW2_WT2$padj, decreasing = FALSE),]), file = "./outputs/DESeq-results/tables/all/res_HW2_WT2.csv")
 ressig_HW2_WT2 <- subset(res_HW2_WT2, padj<0.01)
 ressig_HW2_WT2_up <- subset(res_HW2_WT2, padj<0.01 & log2FoldChange>0)
 ressig_HW2_WT2_dn <- subset(res_HW2_WT2, padj<0.01 & log2FoldChange<0)
-write.csv(as.data.frame(ressig_HW2_WT2[order(ressig_HW2_WT2$padj, decreasing = FALSE),]), file = "~/computing/scripts/EAPSI_LPS-master/DESeqresults_Pdam/tables/overall/res_HW2_WT2.csv")
-write.csv(as.data.frame(ressig_HW2_WT2_up[order(ressig_HW2_WT2_up$log2FoldChange, decreasing = TRUE),]), file = "~/computing/scripts/EAPSI_LPS-master/DESeqresults_Pdam/tables/up/res_HW2_WT2_up.csv")
-write.csv(as.data.frame(ressig_HW2_WT2_dn[order(ressig_HW2_WT2_dn$log2FoldChange, decreasing = FALSE),]), file = "~/computing/scripts/EAPSI_LPS-master/DESeqresults_Pdam/tables/down/res_HW2_WT2_dn.csv")
+write.csv(as.data.frame(ressig_HW2_WT2[order(ressig_HW2_WT2$padj, decreasing = FALSE),]), file = "./outputs/DESeq-results/tables/overall/res_HW2_WT2.csv")
+write.csv(as.data.frame(ressig_HW2_WT2_up[order(ressig_HW2_WT2_up$log2FoldChange, decreasing = TRUE),]), file = "./outputs/DESeq-results/tables/up/res_HW2_WT2_up.csv")
+write.csv(as.data.frame(ressig_HW2_WT2_dn[order(ressig_HW2_WT2_dn$log2FoldChange, decreasing = FALSE),]), file = "./outputs/DESeq-results/tables/down/res_HW2_WT2_dn.csv")
 colnames(res_HW2_WT2)
 summary(res_HW2_WT2)
 ```
@@ -134,13 +134,13 @@ summary(res_HW2_WT2)
 res_WT1_WT2 <- results(dds_LPS, contrast = c("Colony", "WT1", "WT2"))
 res_WT1_WT2$IDGeneInfo <- mcols(dds_LPS)$IDGeneInfo
 res_WT1_WT2$IDGeneInfo <- as.character(res_WT1_WT2$IDGeneInfo)
-write.csv(as.data.frame(res_WT1_WT2[order(res_WT1_WT2$padj, decreasing = FALSE),]), file = "~/computing/scripts/EAPSI_LPS-master/DESeqresults_Pdam/tables/all/res_WT1_WT2.csv")
+write.csv(as.data.frame(res_WT1_WT2[order(res_WT1_WT2$padj, decreasing = FALSE),]), file = "./outputs/DESeq-results/tables/all/res_WT1_WT2.csv")
 ressig_WT1_WT2 <- subset(res_WT1_WT2, padj<0.01)
 ressig_WT1_WT2_up <- subset(res_WT1_WT2, padj<0.01 & log2FoldChange>0)
 ressig_WT1_WT2_dn <- subset(res_WT1_WT2, padj<0.01 & log2FoldChange<0)
-write.csv(as.data.frame(ressig_WT1_WT2[order(ressig_WT1_WT2$padj, decreasing = FALSE),]), file = "~/computing/scripts/EAPSI_LPS-master/DESeqresults_Pdam/tables/overall/res_WT1_WT2.csv")
-write.csv(as.data.frame(ressig_WT1_WT2_up[order(ressig_WT1_WT2_up$log2FoldChange, decreasing = TRUE),]), file = "~/computing/scripts/EAPSI_LPS-master/DESeqresults_Pdam/tables/up/res_WT1_WT2_up.csv")
-write.csv(as.data.frame(ressig_WT1_WT2_dn[order(ressig_WT1_WT2_dn$log2FoldChange, decreasing = FALSE),]), file = "~/computing/scripts/EAPSI_LPS-master/DESeqresults_Pdam/tables/down/res_WT1_WT2_dn.csv")
+write.csv(as.data.frame(ressig_WT1_WT2[order(ressig_WT1_WT2$padj, decreasing = FALSE),]), file = "./outputs/DESeq-results/tables/overall/res_WT1_WT2.csv")
+write.csv(as.data.frame(ressig_WT1_WT2_up[order(ressig_WT1_WT2_up$log2FoldChange, decreasing = TRUE),]), file = "./outputs/DESeq-results/tables/up/res_WT1_WT2_up.csv")
+write.csv(as.data.frame(ressig_WT1_WT2_dn[order(ressig_WT1_WT2_dn$log2FoldChange, decreasing = FALSE),]), file = "./outputs/DESeq-results/tables/down/res_WT1_WT2_dn.csv")
 colnames(res_WT1_WT2)
 summary(res_WT1_WT2)
 ```
@@ -151,13 +151,13 @@ summary(res_WT1_WT2)
 res_HW1_LPS <- results(dds_HW1, contrast = c("Treatment", "LPS", "control"))
 res_HW1_LPS$IDGeneInfo <- mcols(dds_HW1)$IDGeneInfo
 res_HW1_LPS$IDGeneInfo <- as.character(res_HW1_LPS$IDGeneInfo)
-write.csv(as.data.frame(res_HW1_LPS[order(res_HW1_LPS$padj, decreasing = FALSE),]), file = "~/computing/scripts/EAPSI_LPS-master/DESeqresults_Pdam/tables/all/res_HW1_LPS.csv")
+write.csv(as.data.frame(res_HW1_LPS[order(res_HW1_LPS$padj, decreasing = FALSE),]), file = "./outputs/DESeq-results/tables/all/res_HW1_LPS.csv")
 ressig_HW1_LPS <- subset(res_HW1_LPS, padj<0.01)
 ressig_HW1_LPS_up <- subset(res_HW1_LPS, padj<0.01 & log2FoldChange>0)
 ressig_HW1_LPS_dn <- subset(res_HW1_LPS, padj<0.01 & log2FoldChange<0)
-write.csv(as.data.frame(ressig_HW1_LPS[order(ressig_HW1_LPS$padj, decreasing = FALSE),]), file = "~/computing/scripts/EAPSI_LPS-master/DESeqresults_Pdam/tables/overall/res_HW1_LPS.csv")
-write.csv(as.data.frame(ressig_HW1_LPS_up[order(ressig_HW1_LPS_up$log2FoldChange, decreasing = TRUE),]), file = "~/computing/scripts/EAPSI_LPS-master/DESeqresults_Pdam/tables/up/res_HW1_LPS_up.csv")
-write.csv(as.data.frame(ressig_HW1_LPS_dn[order(ressig_HW1_LPS_dn$log2FoldChange, decreasing = FALSE),]), file = "~/computing/scripts/EAPSI_LPS-master/DESeqresults_Pdam/tables/down/res_HW1_LPS_dn.csv")
+write.csv(as.data.frame(ressig_HW1_LPS[order(ressig_HW1_LPS$padj, decreasing = FALSE),]), file = "./outputs/DESeq-results/tables/overall/res_HW1_LPS.csv")
+write.csv(as.data.frame(ressig_HW1_LPS_up[order(ressig_HW1_LPS_up$log2FoldChange, decreasing = TRUE),]), file = "./outputs/DESeq-results/tables/up/res_HW1_LPS_up.csv")
+write.csv(as.data.frame(ressig_HW1_LPS_dn[order(ressig_HW1_LPS_dn$log2FoldChange, decreasing = FALSE),]), file = "./outputs/DESeq-results/tables/down/res_HW1_LPS_dn.csv")
 colnames(res_HW1_LPS)
 summary(ressig_HW1_LPS)
 ```
@@ -167,13 +167,13 @@ summary(ressig_HW1_LPS)
 res_HW2_LPS <- results(dds_HW2, contrast = c("Treatment", "LPS", "control"))
 res_HW2_LPS$IDGeneInfo <- mcols(dds_HW2)$IDGeneInfo
 res_HW2_LPS$IDGeneInfo <- as.character(res_HW2_LPS$IDGeneInfo)
-write.csv(as.data.frame(res_HW2_LPS[order(res_HW2_LPS$padj, decreasing = FALSE),]), file = "~/computing/scripts/EAPSI_LPS-master/DESeqresults_Pdam/tables/all/res_HW2_LPS.csv")
+write.csv(as.data.frame(res_HW2_LPS[order(res_HW2_LPS$padj, decreasing = FALSE),]), file = "./outputs/DESeq-results/tables/all/res_HW2_LPS.csv")
 ressig_HW2_LPS <- subset(res_HW2_LPS, padj<0.01)
 ressig_HW2_LPS_up <- subset(res_HW2_LPS, padj<0.01 & log2FoldChange>0)
 ressig_HW2_LPS_dn <- subset(res_HW2_LPS, padj<0.01 & log2FoldChange<0)
-write.csv(as.data.frame(ressig_HW2_LPS[order(ressig_HW2_LPS$padj, decreasing = FALSE),]), file = "~/computing/scripts/EAPSI_LPS-master/DESeqresults_Pdam/tables/overall/res_HW2_LPS.csv")
-write.csv(as.data.frame(ressig_HW2_LPS_up[order(ressig_HW2_LPS_up$log2FoldChange, decreasing = TRUE),]), file = "~/computing/scripts/EAPSI_LPS-master/DESeqresults_Pdam/tables/up/res_HW2_LPS_up.csv")
-write.csv(as.data.frame(ressig_HW2_LPS_dn[order(ressig_HW2_LPS_dn$log2FoldChange, decreasing = FALSE),]), file = "~/computing/scripts/EAPSI_LPS-master/DESeqresults_Pdam/tables/down/res_HW2_LPS_dn.csv")
+write.csv(as.data.frame(ressig_HW2_LPS[order(ressig_HW2_LPS$padj, decreasing = FALSE),]), file = "./outputs/DESeq-results/tables/overall/res_HW2_LPS.csv")
+write.csv(as.data.frame(ressig_HW2_LPS_up[order(ressig_HW2_LPS_up$log2FoldChange, decreasing = TRUE),]), file = "./outputs/DESeq-results/tables/up/res_HW2_LPS_up.csv")
+write.csv(as.data.frame(ressig_HW2_LPS_dn[order(ressig_HW2_LPS_dn$log2FoldChange, decreasing = FALSE),]), file = "./outputs/DESeq-results/tables/down/res_HW2_LPS_dn.csv")
 colnames(res_HW2_LPS)
 summary(ressig_HW2_LPS)
 ```
@@ -183,13 +183,13 @@ summary(ressig_HW2_LPS)
 res_WT1_LPS <- results(dds_WT1, contrast = c("Treatment", "LPS", "control"))
 res_WT1_LPS$IDGeneInfo <- mcols(dds_WT1)$IDGeneInfo
 res_WT1_LPS$IDGeneInfo <- as.character(res_WT1_LPS$IDGeneInfo)
-write.csv(as.data.frame(res_WT1_LPS[order(res_WT1_LPS$padj, decreasing = FALSE),]), file = "~/computing/scripts/EAPSI_LPS-master/DESeqresults_Pdam/tables/all/res_WT1_LPS.csv")
+write.csv(as.data.frame(res_WT1_LPS[order(res_WT1_LPS$padj, decreasing = FALSE),]), file = "./outputs/DESeq-results/tables/all/res_WT1_LPS.csv")
 ressig_WT1_LPS <- subset(res_WT1_LPS, padj<0.01)
 ressig_WT1_LPS_up <- subset(res_WT1_LPS, padj<0.01 & log2FoldChange>0)
 ressig_WT1_LPS_dn <- subset(res_WT1_LPS, padj<0.01 & log2FoldChange<0)
-write.csv(as.data.frame(ressig_WT1_LPS[order(ressig_WT1_LPS$padj, decreasing = FALSE),]), file = "~/computing/scripts/EAPSI_LPS-master/DESeqresults_Pdam/tables/overall/res_WT1_LPS.csv")
-write.csv(as.data.frame(ressig_WT1_LPS_up[order(ressig_WT1_LPS_up$log2FoldChange, decreasing = TRUE),]), file = "~/computing/scripts/EAPSI_LPS-master/DESeqresults_Pdam/tables/up/res_WT1_LPS_up.csv")
-write.csv(as.data.frame(ressig_WT1_LPS_dn[order(ressig_WT1_LPS_dn$log2FoldChange, decreasing = FALSE),]), file = "~/computing/scripts/EAPSI_LPS-master/DESeqresults_Pdam/tables/down/res_WT1_LPS_dn.csv")
+write.csv(as.data.frame(ressig_WT1_LPS[order(ressig_WT1_LPS$padj, decreasing = FALSE),]), file = "./outputs/DESeq-results/tables/overall/res_WT1_LPS.csv")
+write.csv(as.data.frame(ressig_WT1_LPS_up[order(ressig_WT1_LPS_up$log2FoldChange, decreasing = TRUE),]), file = "./outputs/DESeq-results/tables/up/res_WT1_LPS_up.csv")
+write.csv(as.data.frame(ressig_WT1_LPS_dn[order(ressig_WT1_LPS_dn$log2FoldChange, decreasing = FALSE),]), file = "./outputs/DESeq-results/tables/down/res_WT1_LPS_dn.csv")
 colnames(res_WT1_LPS)
 summary(ressig_WT1_LPS)
 ```
@@ -199,13 +199,13 @@ summary(ressig_WT1_LPS)
 res_WT2_LPS <- results(dds_WT2, contrast = c("Treatment", "LPS", "control"))
 res_WT2_LPS$IDGeneInfo <- mcols(dds_WT2)$IDGeneInfo
 res_WT2_LPS$IDGeneInfo <- as.character(res_WT2_LPS$IDGeneInfo)
-write.csv(as.data.frame(res_WT2_LPS[order(res_WT2_LPS$padj, decreasing = FALSE),]), file = "~/computing/scripts/EAPSI_LPS-master/DESeqresults_Pdam/tables/all/res_WT2_LPS.csv")
+write.csv(as.data.frame(res_WT2_LPS[order(res_WT2_LPS$padj, decreasing = FALSE),]), file = "./outputs/DESeq-results/tables/all/res_WT2_LPS.csv")
 ressig_WT2_LPS <- subset(res_WT2_LPS, padj<0.01)
 ressig_WT2_LPS_up <- subset(res_WT2_LPS, padj<0.01 & log2FoldChange>0)
 ressig_WT2_LPS_dn <- subset(res_WT2_LPS, padj<0.01 & log2FoldChange<0)
-write.csv(as.data.frame(ressig_WT2_LPS[order(ressig_WT2_LPS$padj, decreasing = FALSE),]), file = "~/computing/scripts/EAPSI_LPS-master/DESeqresults_Pdam/tables/overall/res_WT2_LPS.csv")
-write.csv(as.data.frame(ressig_WT2_LPS_up[order(ressig_WT2_LPS_up$log2FoldChange, decreasing = TRUE),]), file = "~/computing/scripts/EAPSI_LPS-master/DESeqresults_Pdam/tables/up/res_WT2_LPS_up.csv")
-write.csv(as.data.frame(ressig_WT2_LPS_dn[order(ressig_WT2_LPS_dn$log2FoldChange, decreasing = FALSE),]), file = "~/computing/scripts/EAPSI_LPS-master/DESeqresults_Pdam/tables/down/res_WT2_LPS_dn.csv")
+write.csv(as.data.frame(ressig_WT2_LPS[order(ressig_WT2_LPS$padj, decreasing = FALSE),]), file = "./outputs/DESeq-results/tables/overall/res_WT2_LPS.csv")
+write.csv(as.data.frame(ressig_WT2_LPS_up[order(ressig_WT2_LPS_up$log2FoldChange, decreasing = TRUE),]), file = "./outputs/DESeq-results/tables/up/res_WT2_LPS_up.csv")
+write.csv(as.data.frame(ressig_WT2_LPS_dn[order(ressig_WT2_LPS_dn$log2FoldChange, decreasing = FALSE),]), file = "./outputs/DESeq-results/tables/down/res_WT2_LPS_dn.csv")
 colnames(res_WT2_LPS)
 summary(ressig_WT2_LPS)
 ```
@@ -221,8 +221,8 @@ ressig_LPS_normal_up <- subset(res_LPS_normal, padj<0.01 & log2FoldChange>0)
 ressig_LPS_normal_dn <- subset(res_LPS_normal, padj<0.01 & log2FoldChange<0)
 summary(ressig_LPS_normal_up)
 
-#write.csv(as.data.frame(ressig_LPS_ctrl[order(ressig_LPS_ctrl$padj, decreasing = FALSE),]), file = "~/computing/scripts/EAPSI_LPS-master/DESeqresults_Pdam/tables/overall/res_LPS_ctrl.csv")
-#write.csv(as.data.frame(ressig_LPS_ctrl_up[order(ressig_LPS_ctrl_up$log2FoldChange, decreasing = TRUE),]), file = "~/computing/scripts/EAPSI_LPS-master/DESeqresults_Pdam/tables/up/res_LPS_ctrl_up.csv")
-#write.csv(as.data.frame(ressig_LPS_ctrl_dn[order(ressig_LPS_ctrl_dn$log2FoldChange, decreasing = FALSE),]), file = "~/computing/scripts/EAPSI_LPS-master/DESeqresults_Pdam/tables/down/res_LPS_ctrl_dn.csv")
+#write.csv(as.data.frame(ressig_LPS_ctrl[order(ressig_LPS_ctrl$padj, decreasing = FALSE),]), file = "./outputs/DESeq-results/tables/overall/res_LPS_ctrl.csv")
+#write.csv(as.data.frame(ressig_LPS_ctrl_up[order(ressig_LPS_ctrl_up$log2FoldChange, decreasing = TRUE),]), file = "./outputs/DESeq-results/tables/up/res_LPS_ctrl_up.csv")
+#write.csv(as.data.frame(ressig_LPS_ctrl_dn[order(ressig_LPS_ctrl_dn$log2FoldChange, decreasing = FALSE),]), file = "./outputs/DESeq-results/tables/down/res_LPS_ctrl_dn.csv")
 ```
 
