--- a/Rmd/LPS_DESeq-volcano_Pdam.Rmd
+++ b/Rmd/LPS_DESeq-volcano_Pdam.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Stable_DESeq-volcano_Pdam"
+title: "LPS_DESeq-volcano_Pdam"
 author: "Mike Connelly"
-date: "10/24/2018"
+date: "12/05/2019"
 output: html_document
 ---
 Volcano plots
